# Pixel

./: Cargo.toml  build.bat
.github/workflows/: rust.yml
example/pixel3d/: Cargo.toml  build.bat  index.html
example/pixel3d/src/: lib.rs
src/: lib.rs
src/graphics/: bind_group.rs  context.rs  mesh.rs  mod.rs  pipeline.rs  random.rs  render.rs  shader.rs  texture_mesh.rs  types.rs  uniform.rs
src/shaders/: mesh.wgsl  mesh_uniform.wgsl
