[package]
name = "pixel3d"
version = "0.1.0"
authors = ["oleja <olejav7@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
log = "0.4"
console_log = { version = "1.0", features = ["color"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "*"
wgpu = "*"
console_error_panic_hook = { version = "0.1.7", optional = true }
winit = { version = "0.29", features = ["rwh_05"] }
pixel = { path = "../../../pixel"}

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
